<resources>
    <string name="app_name">Voting Pro</string>
    <string name="registration_from">Registration From</string>
    <string name="enter_your_name_registration">Enter Your Name</string>
    <string name="enter_your_email_id_registration">Enter Your Email ID</string>
    <string name="enter_your_phone_number_registration">Enter Your Phone Number</string>
    <string name="enter_your_pin_code_registration">Enter Your Pin Code</string>
    <string name="male_registration">Male</string>
    <string name="other_registration">Other</string>
    <string name="female_registration">Female</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="set_image_btn">Set Image</string>
    <string name="next_anyway_btn">Next Anyway</string>
    <string name="registration_task_in_progress">Registration task in progress please wait</string>
    <string name="registration_task_title">Registration Task</string>
    <string name="setting_header_home">Setting</string>
    <string name="history_header_home">History</string>
    <string name="open_header">Open</string>
    <string name="close_header">Close</string>
    <string name="email_id">Email ID</string>
    <string name="name">Name</string>
    <string name="voting_ballot">Voting Ballot</string>
    <string name="this_vote_already_submitted_by">This vote already submitted by</string>
    <string name="enter_the_comment_on_this_subject_of_25_character">Enter the comment on this subject of 25 character</string>
    <string name="going_vote">Going Vote</string>
    <string name="_1">0</string>
    <string name="_2">0</string>
    <string name="_3">0</string>
    <string name="candidate_status">Candidate Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_name">Settings Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="show_day">Show day</string>
    <string name="no_vote_submit_on_this_day">No vote submit on this day</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="sorry_this_date_your_not_voting_submitted">Sorry this date your not voting submitted</string>
    <string name="choose_the_day">Choose the day</string>
    <string name="_40">40</string>
    <string name="trading">Trading</string>
    <string name="trending_voting">Trending Voting</string>
    <string name="show_all_vote">Show All Vote</string>
</resources>