<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Settings_Fragments.User_Profile_Update_Fragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image_Update"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfName_Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_your_name_registration"
        app:startIconContentDescription="Enter Your Name"
        app:startIconDrawable="@drawable/ic_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail_Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_your_email_id_registration"
        app:startIconContentDescription="Enter Your Email ID"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPinCode_Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_your_pin_code_registration"
        app:startIconContentDescription="Enter Your Pin Code"
        app:startIconDrawable="@drawable/ic_pin_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPinCode_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGander_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        >

        <RadioButton
            android:id="@+id/radio_button_Male_Update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:buttonTint="@color/primary_text_color"
            android:text="@string/male_registration"/>

        <RadioButton
            android:id="@+id/radio_button_Other_Update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:buttonTint="@color/primary_text_color"
            android:text="@string/other_registration"/>



        <RadioButton
            android:id="@+id/radio_button_Female_Update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:buttonTint="@color/primary_text_color"
            android:text="@string/female_registration"/>

    </RadioGroup>


    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:text="@string/update_profile"
        />
</LinearLayout>