<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accent_color"
    tools:context=".Activitys.Registration.Register_Activity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/registration_from"
        android:textSize="30sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfName_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_your_name_registration"
        app:startIconContentDescription="Enter Your Name"
        app:startIconDrawable="@drawable/ic_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_your_email_id_registration"
        app:startIconContentDescription="Enter Your Email ID"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp_Register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPhoneNumber_Register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:hint="@string/enter_your_phone_number_registration"
            app:startIconContentDescription="Enter Your Phone Number"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:endIconMode="clear_text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPinCode_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_your_pin_code_registration"
        app:startIconContentDescription="Enter Your Pin Code"
        app:startIconDrawable="@drawable/ic_pin_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPinCode_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>



    <RadioGroup
        android:id="@+id/rgGander_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        >

        <RadioButton
            android:id="@+id/radio_button_Male"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:buttonTint="@color/primary_text_color"
            android:text="@string/male_registration"/>

        <RadioButton
            android:id="@+id/radio_button_Other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:buttonTint="@color/primary_text_color"
            android:text="@string/other_registration"/>



        <RadioButton
            android:id="@+id/radio_button_Female"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:buttonTint="@color/primary_text_color"
            android:text="@string/female_registration"/>

    </RadioGroup>

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:text="Registration"
        android:onClick="btnRegistration"
        />

</LinearLayout>