<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_primary_color"
    tools:context=".Activitys.VotingBallot_Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/voting_ballot"
        android:textSize="28sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_VB1"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/voting_pro"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:layout_gravity="center_horizontal"/>

    <!--Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="Name" />

        <TextView
            android:id="@+id/tvName_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1" />

    </LinearLayout>
    <!--Status-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="Status" />

        <TextView
            android:id="@+id/tvStatus_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <!--Today Subject-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="Today Subject" />

        <TextView
            android:id="@+id/tvTodaySubject_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <EditText
        android:id="@+id/etComment_VB1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/enter_the_comment_on_this_subject_of_25_character"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tvAfterVotingMassage_VB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="50sp"
        android:text="@string/this_vote_already_submitted_by" />


    <LinearLayout
        android:id="@+id/voting_button_layout_VB1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <ImageButton
            android:id="@+id/btnLike_VB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:minHeight="48dp"
            android:layout_margin="5dp"
            android:onClick="btnSetOnVoteSubmit"
            android:background="@color/dark_primary_color"
            app:srcCompat="@drawable/ic_like"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/btnNeutral_VB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:minHeight="48dp"
            android:layout_margin="5dp"
            android:background="@color/dark_primary_color"
            android:onClick="btnSetOnVoteSubmit"
            app:srcCompat="@drawable/ic_neutral" />

        <ImageButton
            android:id="@+id/btnDislike_VB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:minHeight="48dp"
            android:layout_margin="5dp"
            android:background="@color/dark_primary_color"
            android:onClick="btnSetOnVoteSubmit"
            app:srcCompat="@drawable/ic_dislike" />
    </LinearLayout>


    <!-- Show the vote layout -->
    <LinearLayout
        android:id="@+id/voting_button_layout_VB11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLike_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_like" />

        <TextView
            android:id="@+id/tvLike_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/ivNeutral_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            app:srcCompat="@drawable/ic_neutral"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvNeutral_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/ivDislike_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            app:srcCompat="@drawable/ic_dislike"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvDislike_VB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

</LinearLayout>